General: Remove unnecessary lines

--- a/BookManager/Configuration/appSettings.json
+++ b/BookManager/Configuration/appSettings.json
@@ -4,13 +4,13 @@
   },
 
   "Filters": {
-    "Title": "",
-    "Genre": "",
+    "Title": "The Old Man and the Sea",
+    "Genre": "Fiction",
     "Author": "Ernest Hemingway",
-    "Publisher": "",
-    "MoreThanPages": "",
-    "LessThanPages": "",
-    "PublishedBefore": "",
-    "PublishedAfter": ""
+    "Publisher": "Charles Scribner's Sons",
+    "MoreThanPages": "120",
+    "LessThanPages": "128",
+    "PublishedBefore": "1953-09-01",
+    "PublishedAfter": "1951-09-01"
   }
 }
